--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,23 @@
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="true" />“
+        android:required="true" />
+
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-feature
         android:name="android.hardware.camera.flash"
         android:required="true" />
 
+    <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/icon_mobiflow"
-        android:logo="@raw/logo_atos_36px"
         android:label="@string/app_name"
+        android:logo="@raw/logo_atos_36px"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -33,27 +39,26 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".SettingsActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name="com.topimagesystems.controllers.instructions.InstructionsController"
             android:screenOrientation="portrait" />
         <!-- camera -->
         <activity
             android:name="com.topimagesystems.controllers.imageanalyze.CameraManagerController"
-            android:configChanges="keyboardHidden|orientation|screenSize" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize"></activity>
         <activity
             android:name="com.topimagesystems.controllers.imageanalyze.CameraController"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:hardwareAccelerated="false" >
-        </activity>
+            android:hardwareAccelerated="false"></activity>
         <activity
             android:name="com.topimagesystems.controllers.imageanalyze.DynamicCaptureCameraController"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:hardwareAccelerated="false" >
-        </activity>
+            android:hardwareAccelerated="false"></activity>
         <activity
             android:name="com.topimagesystems.ui.InfoScreenActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
-        </activity>
-    </application>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
+     </application>
 
 </manifest>
